--- a/hyper.yaml
+++ b/hyper.yaml
@@ -9,27 +9,27 @@ image_resolution: [64,64]
 code_root: null
 integrations:
   wandb:
-    active: False
+    active: True
 #    run_id: "test_run_id"
 
 iterator: iterator.Iterator
 model: conv_ae.Model
 batch_size: 5
-num_epochs: 1
+num_epochs: 100
 
 
 # Conv parameters
 conv:
   amount_conv_blocks: 2
-  kernel_size: 5
-  stride: 1
+  kernel_size: 3
+  stride: 2
   conv_channels:
     [3,32,64]
-  padding: 2
+  padding: 1
 linear:
   bottleneck_size: 10
 
-upsample: 'nearest'
+#upsample: 'nearest'
 #'linear', 'bilinear', 'bicubic'
 
 activation_function: "ReLU"
