--- a/configs/conv/6copy.yaml
+++ b/configs/conv/6copy.yaml
@@ -28,7 +28,7 @@ conv:
     [3,32,64]
   #padding: 1
 #linear:
-#  bottleneck_size: 10
+#  latent_dim: 10
 
 #upsample: 'nearest'
 #'linear', 'bilinear', 'bicubic'
@@ -38,4 +38,3 @@ loss_function: "L2"
 track_loss: "L1"
 learning_rate: 0.0001
 weight_decay: 0.00001 
-log_freq: 2000
