--- a/configs/conv_var_lin/1.yaml
+++ b/configs/conv_var_lin/1.yaml
@@ -5,36 +5,43 @@ validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
 
+CUDA_VISIBLE_DEVICES: "7"
 
 code_root: null
 integrations:
   wandb:
     active: True
-#    run_id: "test_run_id"
 
 iterator: iterator.Iterator
 model: conv_ae.Model
 batch_size: 5
-num_epochs: 100
-
-
-# Conv parameters
-conv:
-  amount_conv_blocks: 2
-  kernel_size: 3
-  stride: 2
-  conv_channels:
-    [3,32,64]
-  padding: 1
-linear:
-  bottleneck_size: 10
-
-#upsample: 'nearest'
-#'linear', 'bilinear', 'bicubic'
+num_epochs: 50
 
 activation_function: "ReLU"
 loss_function: "L2"
 track_loss: "L1"
 learning_rate: 0.0001
 weight_decay: 0.00001 
-log_freq: 2000
+#log_freq: 2000
+
+explanation: "Convolutional net with linaer layer and a varying latent dimension."
+
+#variational:
+#  sigma: False
+
+# Conv parameters
+conv:
+  amount_conv_blocks: 2
+  kernel_size: 2
+  stride: 2
+  conv_channels:
+    [3,32,64]
+  #padding: 2
+
+#upsample: 'bilinear'
+#'linear', 'nearest', 'bicubic'
+
+linear:
+  latent_dim: 256
+
+
