--- a/conv_config.yaml
+++ b/conv_config.yaml
@@ -5,36 +5,46 @@ validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
 
+CUDA_VISIBLE_DEVICES: "7"
 
 code_root: null
 integrations:
   wandb:
     active: False
-#    run_id: "test_run_id"
 
-iterator: iterator.Iterator
+iterator: iterator_copy.Iterator
 model: conv_ae.Model
 batch_size: 5
 num_epochs: 1
-
-
-# Conv parameters
-conv:
-  amount_conv_blocks: 2
-  kernel_size: 5
-  stride: 1
-  conv_channels:
-    [3,32,64]
-  padding: 2
-linear:
-  bottleneck_size: 10
-
-upsample: 'nearest'
-#'linear', 'bilinear', 'bicubic'
 
 activation_function: "ReLU"
 loss_function: "L2"
 track_loss: "L1"
 learning_rate: 0.0001
 weight_decay: 0.00001 
-log_freq: 2000
+#log_freq: 2000
+
+
+variational:
+  sigma: False
+  tanh:
+    mean: 1000
+    width: 150
+    factor: 0.5
+
+# Conv parameters
+conv:
+  amount_conv_blocks: 2
+  kernel_size: 3
+  stride: 1
+  conv_channels:
+    [3,32,64]
+  #padding: 2
+
+upsample: 'bilinear'
+#'linear', 'nearest', 'bicubic'
+
+linear:
+  latent_dim: 10
+
+
