--- a/config_test.yaml
+++ b/config_test.yaml
@@ -1,21 +1,21 @@
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
-data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some"
+data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/ae_only_phi"
 validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
 
-
+#CUDA_VISIBLE_DEVICES: "7"
 
 code_root: null
 integrations:
   wandb:
-    active: True
+    active: False
 
 iterator: iterator.Iterator
 model: conv_ae.Model
 batch_size: 5
-num_epochs: 200
+num_epochs: 1
 
 activation_function: "ReLU"
 loss_function: "L2"
@@ -24,26 +24,32 @@ learning_rate: 0.0001
 weight_decay: 0.00001 
 #log_freq: 2000
 
-explanation: "Convolutional auto encoder without down/upsampling in 3 blocks on vae_some data."
 
 variational:
   sigma: False
   tanh:
-    mean: 7000
-    width: 400
-    factor: 0.001
+    mean: 1000
+    width: 150
+    factor: 0.005
 
 # Conv parameters
 conv:
   amount_conv_blocks: 3
-  kernel_size: 3
+  kernel_size: 1
   stride: 1
   conv_channels:
     [3,32,32,64]
   #padding: 2
 
-upsample: 'nearest'
+upsample: 'bilinear'
 #'linear', 'nearest', 'bicubic'
 
 linear:
-  latent_dim: 32
+  latent_dim: 10
+
+
+  eval_hook:
+    eval_callbacks:
+        eigen_vector_latent: iterator.callback_latent
+
+   
