--- a/configs/up_vae_mu/0.yaml
+++ b/configs/up_vae_mu/0.yaml
@@ -1,11 +1,11 @@
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
-data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/ae_only_phi"
+data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some"
 validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
 
-CUDA_VISIBLE_DEVICES: "7"
+
 
 code_root: null
 integrations:
@@ -15,7 +15,7 @@ integrations:
 iterator: iterator.Iterator
 model: conv_ae.Model
 batch_size: 5
-num_epochs: 100
+num_epochs: 200
 
 activation_function: "ReLU"
 loss_function: "L2"
@@ -24,26 +24,26 @@ learning_rate: 0.0001
 weight_decay: 0.00001 
 #log_freq: 2000
 
-explanation: "Convolutional auto encoder with down/upsampling."
+explanation: "Convolutional auto encoder without down/upsampling in 3 blocks on vae_some data."
 
 variational:
   sigma: False
   tanh:
-    mean: 1000
-    width: 150
-    factor: 0.5
+    mean: 5000
+    width: 400
+    factor: 0.001
 
 # Conv parameters
 conv:
-  amount_conv_blocks: 2
+  amount_conv_blocks: 3
   kernel_size: 3
   stride: 1
   conv_channels:
-    [3,32,64]
+    [3,32,32,64]
   #padding: 2
 
-upsample: 'bilinear'
+upsample: 'nearest'
 #'linear', 'nearest', 'bicubic'
 
 linear:
-  latent_dim: 16
+  latent_dim: 32
