--- a/configs/up_vae_mu/4.yaml
+++ b/configs/up_vae_mu/4.yaml
@@ -1,50 +1,48 @@
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
-data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/ae_only_phi"
+data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some"
 validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
 
-CUDA_VISIBLE_DEVICES: "7"
+
 
 code_root: null
 integrations:
   wandb:
-    active: False
+    active: True
 
-iterator: iterator_copy.Iterator
+iterator: iterator.Iterator
 model: conv_ae.Model
 batch_size: 5
-num_epochs: 1
+num_epochs: 200
 
 activation_function: "ReLU"
 loss_function: "L2"
-track_loss: "L1"
 learning_rate: 0.0001
 weight_decay: 0.00001 
 #log_freq: 2000
 
+explanation: "Convolutional auto encoder without down/upsampling in 3 blocks on vae_some data."
 
 variational:
   sigma: False
   tanh:
-    mean: 1000
-    width: 150
-    factor: 0.5
+    mean: 8000
+    width: 400
+    factor: 0.001
 
 # Conv parameters
 conv:
-  amount_conv_blocks: 2
-  kernel_size: 3
+  amount_conv_blocks: 3
+  kernel_size: 1
   stride: 1
   conv_channels:
-    [3,32,64]
+    [3,32,32,64]
   #padding: 2
 
-upsample: 'bilinear'
+upsample: 'nearest'
 #'linear', 'nearest', 'bicubic'
 
 linear:
-  latent_dim: 10
-
-
+  latent_dim: 32
