--- a/configs/up_vae_mu_sky/0_copy.yaml
+++ b/configs/up_vae_mu_sky/0_copy.yaml
@@ -1,6 +1,6 @@
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
-data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some"
+data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some_sky"
 validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
@@ -10,7 +10,7 @@ image_resolution: [64,64]
 code_root: null
 integrations:
   wandb:
-    active: True
+    active: False
 
 iterator: iterator.Iterator
 model: conv_ae.Model
@@ -29,7 +29,7 @@ explanation: "Convolutional auto encoder without down/upsampling in 3 blocks on 
 variational:
   sigma: False
   tanh:
-    mean: 7000
+    mean: 5000
     width: 400
     factor: 0.001
 
