--- a/run_bash/vae/vae_only_4_conv_blocks.yaml
+++ b/run_bash/vae/vae_only_4_conv_blocks.yaml
@@ -1,30 +1,21 @@
-# info for run
-code_root: null
-integrations:
-  wandb:
-    active: True
-#CUDA_VISIBLE_DEVICES: "7"
-#explanation: "VAE-vae_var_some_sky--3_conv_blocks_up_nearest_var_conv."
-
-# Dataset info
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
 data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some_sky"
-request_parameters: True
-request_pose: False
-# request_tri_images: False
 validation_split: 0.1
 shuffle_dataset: True
 image_resolution: [64,64]
 
-# Iterator info
+#CUDA_VISIBLE_DEVICES: "7"
+
+code_root: null
+integrations:
+  wandb:
+    active: True
+
 iterator: iterator.Iterator
 model: conv_ae.Model
 batch_size: 1
-num_epochs: 150
-
-
-# Model info
+num_epochs: 50
 
 activation_function: "ReLU"
 loss_function: "L2"
@@ -33,25 +24,26 @@ learning_rate: 0.0001
 weight_decay: 0.00001 
 #log_freq: 2000
 
+explanation: "VAE-vae_var_some_sky--only_4_conv_blocks."
+
 variational:
   sigma: False
   sigmoid_regulator:
     start_amplitude: 1.E-5
-    start_step: 60000
-    width: 500
+    start_step: 50000
+    width: 400
     amplitude: 0.001
-
 # Conv parameters
 conv:
-  amount_conv_blocks: 3
-  kernel_size: 5
-  stride: 1
+  amount_conv_blocks: 4
+  kernel_size: 2
+  stride: 2
   conv_channels:
-    [3,32,32,64]
+    [3,32,32,32,64]
   #padding: 2
 
-upsample: 'nearest'
+#upsample: 'nearest'
 #'linear', 'nearest', 'bicubic'
 
 linear:
-  latent_dim: 64
+  latent_dim: 32
