--- a/config_test.yaml
+++ b/config_test.yaml
@@ -2,26 +2,26 @@
 code_root: null
 integrations:
   wandb:
-    active: True
+    active: False
 #CUDA_VISIBLE_DEVICES: "7"
 #explanation: "VAE-vae_var_some_sky--3_conv_blocks_up_nearest_var_conv."
 
 # Dataset info
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
-data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some_sky"
-request_parameters: True
+data_path: /export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/three_var_some_fix_camera
+request_parameters: False
 request_pose: False
-# request_tri_images: False
+request_tri: True
 validation_split: 0.1
 shuffle_dataset: True
-image_resolution: [64,64]
+image_resolution: 64
 
 # Iterator info
 iterator: iterator.Iterator
 model: conv_ae.Model
-batch_size: 1
-num_epochs: 150
+batch_size: 10
+num_epochs: 15
 
 
 # Model info
