--- a/VAE/configs/config_test.yaml
+++ b/VAE/configs/config_test.yaml
@@ -2,24 +2,27 @@
 code_root: null
 integrations:
   wandb:
-    active: False
+    active: True
 #CUDA_VISIBLE_DEVICES: "7"
-#explanation: "VAE-vae_var_some_sky--3_conv_blocks_up_nearest_var_conv."
+explanation: "Test only for debugging."
+debug_log_level: True
 
 # Dataset info
-dataset: dataset.DatasetTrain
-validation_dataset: dataset.DatasetEval
-data_path: /export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/three_var_some_fix_camera
+datasets:
+  train: data.dataset.DatasetTrain
+  validation: data.dataset.DatasetEval
+data_root: /export/home/rhaecker/documents/research-of-latent-representation/data/only_dir_light_some_camera_theta
+
 request_parameters: False
 request_pose: False
-request_tri: True
+request_tri: False
 validation_split: 0.1
 shuffle_dataset: True
 image_resolution: 64
 
 # Iterator info
 iterator: iterator.Iterator
-model: conv_ae.Model
+model: model.vae.Model
 batch_size: 10
 num_epochs: 15
 
