--- a/VAE/configs/run_bash/vae_3_conv_blocks_up_nearest.yaml
+++ b/VAE/configs/run_bash/vae_3_conv_blocks_up_nearest.yaml
@@ -1,6 +1,6 @@
 dataset: dataset.DatasetTrain
 validation_dataset: dataset.DatasetEval
-data_path: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some_sky"
+data_root: "/export/home/rhaecker/documents/Machine-Learning-on-individual-data/data/vae_var_some_sky"
 
 validation_split: 0.1
 shuffle_dataset: True
@@ -14,7 +14,7 @@ integrations:
     active: True
 
 iterator: iterator.Iterator
-model: conv_ae.Model
+model: vae.Model
 batch_size: 1
 num_epochs: 50
 
