Better folder structure and cleaned up code.

--- a/VAE/configs/old_configs/conv/0.yaml
+++ b/VAE/configs/old_configs/conv/0.yaml
@@ -21,7 +21,7 @@ explanation: "Short test for convolution size of kernel and stride"
 
 # Conv parameters
 conv:
-  amount_conv_blocks: 2
+  n_blocks: 2
   kernel_size: 2
   stride: 2
   conv_channels:
