--- a/VAE/configs/old_configs/conv_var_lin/1.yaml
+++ b/VAE/configs/old_configs/conv_var_lin/1.yaml
@@ -31,7 +31,7 @@ explanation: "Convolutional net with linaer layer and a varying latent dimension
 
 # Conv parameters
 conv:
-  amount_conv_blocks: 2
+  n_blocks: 2
   kernel_size: 2
   stride: 2
   conv_channels:
