--- a/VAE/configs/old_configs/conv_lin/0copy.yaml
+++ b/VAE/configs/old_configs/conv_lin/0copy.yaml
@@ -21,7 +21,7 @@ explanation: "Convolution and linear test size of kernel and stride"
 
 # Conv parameters
 conv:
-  amount_conv_blocks: 2
+  n_blocks: 2
   kernel_size: 2
   stride: 2
   conv_channels:
