--- a/VAE/configs/old_configs/upsample_var_lin/6.yaml
+++ b/VAE/configs/old_configs/upsample_var_lin/6.yaml
@@ -31,7 +31,7 @@ explanation: "Convolutional (same spacial size) and up/downsample with linear la
 
 # Conv parameters
 conv:
-  amount_conv_blocks: 2
+  n_blocks: 2
   kernel_size: 3
   stride: 1
   conv_channels:
