--- a/GAN/configs/vae_gan.yaml
+++ b/GAN/configs/vae_gan.yaml
@@ -3,7 +3,7 @@ code_root: null
 integrations:
   wandb:
     active: True
-    project: "Debug!"
+    project: "GAN"
 
 # Dataset info
 datasets:
@@ -19,48 +19,40 @@ shuffle_dataset: True
 image_resolution: 64
 
 # Meta Info
-explanation: "Test only for debugging."
-debug_log_level: True
-#CUDA_VISIBLE_DEVICES: 8
+explanation: "GAN with VAE var reconstruction weight."
+debug_log_level: False
+CUDA_VISIBLE_DEVICES: 9
 
 # Iterator info
 iterator: iterator.iterator.Iterator
-model: model.vae.VAE_Model
+model: model.gan.GAN
 batch_size: 10
-num_epochs: 2
+num_epochs: 125
 
 losses:
   reconstruction_loss: "L2"
-  view_loss: "L1"
+  reconstruction_loss_weight: 20
+  #view_loss: "L1"
   KLD_loss:
-    start_step: 60000
-    width: 500
-    amplitude: 0.001
+    start_step: 20000
+    width: 700
+    amplitude: 0.0001
 
-# Model info
-activation_function: "ReLU"
-learning_rate: 0.0001
+# Generator
+learning_rate: 0.0002
+beta1: 0.5
 weight_decay: 0.000001 
 #log_freq: 2000
+activation_function: "ReLU"
 
-#upsample: 'nearest'
-#conv_after_upsample: True
-#'linear', 'nearest', 'bicubic'
-
-#linear:
-#  latent_dim: 64
 variational:
   sigma: True
 
 batch_norm: True
 # Conv parameters
 conv:
-  #n_blocks: 3
-  #kernel_size: 3
-  #stride: 2
-  #padding: 2
-  #conv_channels:
-  #  [3,32,32,64]
   n_channel_start: 32
   n_channel_max: 256
   final_layer: True
+
+
