--- a/GAN/configs/24/phi_metric.yaml
+++ b/GAN/configs/24/phi_metric.yaml
@@ -9,8 +9,7 @@ integrations:
 datasets:
   train: data.dataset.DatasetTrain
   validation: data.dataset.DatasetEval
-data_root: /export/home/rhaecker/documents/research-of-latent-representation/data/big_var_phi_theta_scale
-#big_var_phi_theta_scale
+data_root: /export/home/rhaecker/documents/research-of-latent-representation/data/phi_seq
 
 #filter:
 #  same_filter: False
@@ -24,9 +23,8 @@ data_root: /export/home/rhaecker/documents/research-of-latent-representation/dat
   #validation:
       #total_cuboids: 2
 
-#checkpoint_root: /export/home/rhaecker/documents/research-of-latent-representation/GAN/logs/2020-05-02T14-16-28_gan_big_phi_theta_scale_test_big_metric/train/checkpoints/
 
-request_parameters: True
+request_parameters: False
 
 request_pose: False
 request_tri: False
@@ -36,7 +34,8 @@ shuffle_train: True
 image_resolution: 64
 
 # Meta Info
-explanation: "GAN with VAE big data phi theta scale with metric and latent sample."
+#explanation: "GAN with VAE data phi with metric 03,30, update with accuracy 0.65, lr 0.00005, reduce_lr 0.7,  double lr, latent sample, batchsize 32, 50k steps."
+explanation: "GAN with VAE data phi !counter part! without metric loss, update with accuracy 0.65, lr 0.00005, reduce_lr 0.7, double lr, latent sample, batchsize 32, 50k steps."
 debug_log_level: False
 #CUDA_VISIBLE_DEVICES: 5
 
@@ -45,7 +44,7 @@ iterator: iterator.iterator.Iterator
 model: model.gan.GAN
 batch_size: 32
 #num_epochs: 1
-num_steps: 500000
+num_steps: 50000
 #70000
 random_seed: 13831
 
@@ -53,19 +52,17 @@ optimization: #to implement
   latent_sample: True
   update: "accuracy" # "one" "one_prob" "both" "accuracy"
   accuracy_threshold: 0.65
-  #factor_disc_lr: 2
-  #reduce_lr: 0.5
+  factor_disc_lr: 2
+  reduce_lr: 0.7
 
 losses:
-  metric_loss:
-    phi_margin: 30
-    scale_margin: 0.5
-    theta_margin: 30
-    alpha_margin: 0.5
-    weight: 20
+  #metric_loss:
+  #  weight: 50
+  #  alpha_margin: 0.3
+  #  phi_margin: 30
   discriminator_loss: "BCE" # "L2" "BCE"
   reconstruction_loss: "L2"
-  reconstruction_loss_weight: 500
+  reconstruction_loss_weight: 10000
   #view_loss: "L1"
   KLD_loss:
     start_step: 20000
@@ -73,7 +70,7 @@ losses:
     amplitude: 0.0001
 
 # Generator
-learning_rate: 0.0001
+learning_rate: 0.00005
 beta1: 0.5
 weight_decay: 0.000001 
 #log_freq: 2000
