--- a/GAN/configs/filter_big_var_phi_theta.yaml
+++ b/GAN/configs/filter_big_var_phi_theta.yaml
@@ -2,31 +2,29 @@
 code_root: null
 integrations:
   wandb:
-    active: True
-    project: "GAN"
+    active: False
+    project: "Debug!"
 
 # Dataset info
 datasets:
   train: data.dataset.DatasetTrain
   validation: data.dataset.DatasetEval
-data_root: /export/home/rhaecker/documents/research-of-latent-representation/data/big_var_phi_theta_scale
-#big_var_phi_theta_scale
+data_root: /export/home/rhaecker/documents/research-of-latent-representation/data/big_var_phi_theta
 
-#filter:
-#  same_filter: False
-#  train:
+filter:
+  same_filter: True
+  local: True
+  train:
+    CameraRes_height: 512
     #total_branches: null
-    #scale: [1.6,2]
-    #theta: [0,2]
-    #total_cuboids: 2
-    #r: [0.99,1]
-    #totalPointLights: [0,5]
+    #same_theta: True
+    #same_scale: True
+    #scale: 1.5
+    #total_cuboids: 3
   #validation:
       #total_cuboids: 2
 
-#checkpoint_root: /export/home/rhaecker/documents/research-of-latent-representation/GAN/logs/2020-05-02T14-16-28_gan_big_phi_theta_scale_test_big_metric/train/checkpoints/
-
-request_parameters: True
+request_parameters: False
 
 request_pose: False
 request_tri: False
@@ -36,7 +34,7 @@ shuffle_train: True
 image_resolution: 64
 
 # Meta Info
-explanation: "GAN with VAE big data phi theta scale with metric and latent sample."
+#explanation: "GAN with VAE var reconstruction weight."
 debug_log_level: False
 #CUDA_VISIBLE_DEVICES: 5
 
@@ -45,24 +43,22 @@ iterator: iterator.iterator.Iterator
 model: model.gan.GAN
 batch_size: 32
 #num_epochs: 1
-num_steps: 500000
+num_steps: 10
 #70000
 random_seed: 13831
 
 optimization: #to implement
   latent_sample: True
   update: "accuracy" # "one" "one_prob" "both" "accuracy"
-  accuracy_threshold: 0.65
-  #factor_disc_lr: 2
+  accuracy_threshold: 0.6
+  factor_disc_lr: 2
   #reduce_lr: 0.5
 
 losses:
   metric_loss:
-    phi_margin: 30
-    scale_margin: 0.5
-    theta_margin: 30
-    alpha_margin: 0.5
-    weight: 20
+    phi_margin: 15
+    alpha_margin: 0.3
+    weight: 50
   discriminator_loss: "BCE" # "L2" "BCE"
   reconstruction_loss: "L2"
   reconstruction_loss_weight: 500
